# QT6_Playground

./: .gitattributes  README.md
QT_Task01/: CMakeLists.txt  Main.qml  main.cpp
QT_Task02/: CMakeLists.txt  Main.qml  Meme1SrcFile.qrc  MemesResourceFile.qrc  main.cpp
